CineReserveProject/backend/MovieRentMicroservice/k8s/movierent-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movierent-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movierent-db
  template:
    metadata:
      labels:
        app: movierent-db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: init-dump
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pv-claim
        - name: init-dump
          configMap:
            name: postgres-dump
