CineReserveProject/backend/MovieRentMicroservice/k8s/movierent-api-loadbalancing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movierent-api
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 5000
      targetPort: 5000
    - name: https
      port: 5001
      targetPort: 5001
  selector:
    app: movierent-api
