CineReserveProject/backend/MovieRentMicroservice/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movierent-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: movierent-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movierent-api
                port:
                  number: 5000
